# RowDetr-v2

./: .gitignore  ReadMe.md  pyproject.toml  results
datasets/: row_detection_dataset.py
hooks/: onnx_checkpointer.py  viz_hook.py  viz_row_col_hook.py
metrics/: classic_metrics.py  lpd_metric.py  lpd_metric_row_col.py  metrics.py  poly_distance_metric.py  row_col_metrics.py  tusimple_metric.py  tusimple_metric_row_col.py
models/: act_funcs.py  attention_mechanisms.py  decoders.py  loss_manager.py  loss_manager_row_col.py  loss_register.py  losses.py  matcher.py  optmizers.py  poly_detection.py  poly_head.py  poly_transformer.py  utils.py
models/row_column_former/: resnet50fpn.py  row_column_decoder.py  row_column_encoder.py  row_column_former.py  utils.py
scripts/: dist.sh  dist_culanes.sh  dist_resume.sh  dist_row_col.sh  dist_tusimple.sh  test_all_nf.sh
test_scripts/: test_culanes.py  test_nf.py  test_nf_row_col.py  test_tusimple.py
tools/: convertCRDLD.py  convert_onnx_file.py  export.py  generate_table.py  infer.py  infer_dataset.py  infer_folder.py  infer_tiffs.py  infer_utils.py  infer_video.py  labelbox_downloader.py  labelbox_tiff_uploader.py  labelbox_video_uploader.py  merge_datasets.py  onnx_check.py  onnx_custom_ops.py  post_process_dataset.py  resize_agronav.py  sorter.py  tiff_utils.py  to_onnx.py
train_scripts/: resume_training.py  run.py  run_dist.py  run_row_col_former.py
transforms/: custom_transforms.py
