[project]
name = "rowdetr"
version = "0.1.0"
description = "Environment for RowDetr with PyTorch and OpenMMLab dependencies"
requires-python = ">=3.11"

[tool.pixi.project]
channels = ["nvidia/label/cuda-12.1.0", "pytorch", "nvidia", "conda-forge"]
platforms = []

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = "2.4*"
torchvision = "0.19.*"
torchaudio = "2.4.*"
pytorch-cuda = "12.1*"
cuda-toolkit = "12.1*"

[tool.pixi.pypi-dependencies]
mmengine = "*"
timm = "*"
scipy = "*"
sortedcontainers = "*"
onnx = "*"
onnxscript = "*"
future = "*"
tensorboard = "*"

